(PC-7790) Fix UI regression on the button
The button size had been reduced because, on firefox, the price cell width is too small for the placeholder
to be displayed correctly when looking at events stocks.
One other way to fix this is to reduce the quantity width which was too large given the number typed in it

--- a/src/components/pages/Offers/Offer/Stocks/StockItem/StockItem.scss
+++ b/src/components/pages/Offers/Offer/Stocks/StockItem/StockItem.scss
@@ -19,6 +19,10 @@
     }
   }
 
+  .quantity-input {
+    width: 95px;
+  }
+
   .it-input {
     box-shadow: none;
     margin-top: 0;
