--- a/src/components/pages/Offers/Offer/Stocks/StockItemOptionsMenu/StockItemOptionsMenu.scss
+++ b/src/components/pages/Offers/Offer/Stocks/StockItemOptionsMenu/StockItemOptionsMenu.scss
@@ -5,6 +5,7 @@
     background-color: transparent;
     border: none;
     display: flex;
+    padding: rem(8px) rem(10px);
 
     .stock-options-menu-button-icon {
       height: rem(24px);
